# Collatio

./: .gitignore  Makefile  README.markdown  configure
doc/: Critica textual.doc  README  ReinaValera1909.txt
src/: BookReader.h  EditDistance.h  Makefile  Makefile.in  Paragraph.h  README  Signature.h  config.h  config.h.in  config.status  configure  configure.ac  m2  main.cc  md5.h
src/datasets/: ReinaValera1865.txt  prueba1.txt  prueba2.txt
src/gui/: col.rb  collatio.glade  gui.rb  readme
src/gui/Example Projects/example/: example.cproj
src/rexml/: guiproject.rb  lib.glade
src/rtf/: Makefile  rtfactn.c  rtfdecl.h  rtfreader.c  rtftype.h  test.rtf
src/separando/: Collatio.glade  Collatio.glade.bak  TODO  collatio.rb  commitDetails.txt  configure.in  project.rb  tag.rb  tagManager.rb  treeV.rb
src/separando/Ejemplo/: Ejemplo.cproj
src/separando/pixmaps/.svn/: entries
test/: ParagraphTest.cc
